--- a/scripts/bosh-bootloader/concourse-acceptance/task.yml
+++ b/scripts/bosh-bootloader/concourse-acceptance/task.yml
@@ -9,15 +9,23 @@ image_resource:
 inputs:
   - name: bosh-bootloader
   - name: ci
+  - name: concourse-release
+  - name: garden-release
+  - name: concourse-deployment
+  - name: stemcell
 outputs:
-  - name: bbl-integration-s3
+  - name: bbl-acceptance-s3
 
 run:
-  path: ci/scripts/bosh-bootloader/gcp-integration/task
+  path: ci/scripts/bosh-bootloader/concourse-acceptance/task
 
 params:
+  BBL_AWS_REGION:
+  BBL_AWS_ACCESS_KEY_ID:
+  BBL_AWS_SECRET_ACCESS_KEY:
   BBL_GCP_SERVICE_ACCOUNT_KEY:
   BBL_GCP_PROJECT_ID:
   BBL_GCP_REGION:
   BBL_GCP_ZONE:
   BBL_TEST_ENV_ID_PREFIX:
+  ENABLE_TERRAFORM_FLAG:
