--- a/scripts/bosh-bootloader/test-with-latest-bosh-cli/task.yml
+++ b/scripts/bosh-bootloader/test-with-latest-bosh-cli/task.yml
@@ -12,7 +12,7 @@ inputs:
   - name: bosh-cli
 
 outputs:
-  - name: bbl-integration-s3
+  - name: bbl-acceptance-s3
 
 run:
   path: ci/scripts/bosh-bootloader/test-with-latest-bosh-cli/task
