--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -213,6 +213,7 @@ jobs:
   - task: test
     file: ci/scripts/bosh-bootloader/aws-acceptance/task.yml
     params:
+      BBL_IAAS: aws
       BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
       BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
       BBL_AWS_REGION: {{aws_region}}
@@ -240,6 +241,7 @@ jobs:
   - task: test
     file: ci/scripts/bosh-bootloader/gcp-acceptance/task.yml
     params:
+      BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
       BBL_GCP_PROJECT_ID: {{gcp_project_id}}
       BBL_GCP_REGION: {{gcp_region}}
