--- a/scripts/bosh-bootloader/aws-acceptance/task.yml
+++ b/scripts/bosh-bootloader/aws-acceptance/task.yml
@@ -16,6 +16,7 @@ run:
   path: ci/scripts/bosh-bootloader/aws-acceptance/task
 
 params:
+  BBL_IAAS:
   BBL_AWS_REGION:
   BBL_AWS_ACCESS_KEY_ID:
   BBL_AWS_SECRET_ACCESS_KEY:
