--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -342,6 +342,7 @@ jobs:
   - task: test
     file: ci/scripts/bosh-bootloader/concourse-acceptance/task.yml
     params:
+      BBL_IAAS: aws
       BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
       BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
       BBL_AWS_REGION: {{aws_region}}
