--- a/scripts/bosh-bootloader/test-with-latest-terraform/task.yml
+++ b/scripts/bosh-bootloader/test-with-latest-terraform/task.yml
@@ -18,8 +18,9 @@ run:
   path: ci/scripts/bosh-bootloader/test-with-latest-terraform/task
 
 params:
-  GCP_SERVICE_ACCOUNT_KEY:
-  GCP_PROJECT_ID:
-  GCP_REGION:
-  GCP_ZONE:
+  BBL_GCP_SERVICE_ACCOUNT_KEY:
+  BBL_GCP_PROJECT_ID:
+  BBL_GCP_REGION:
+  BBL_GCP_ZONE:
+  BBL_IAAS:
   BBL_TEST_ENV_ID_PREFIX:
