Changes to windows-stemcell triggers constats-windows.
Signed-off-by: Zach Gershman <zgershman@pivotal.io>

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -435,6 +435,8 @@ jobs:
       resource: infrastructure-ci
     - get: bbl-states-repo
       resource: infrastructure-ci-bbl-states
+    - get: windows-stemcell
+      trigger: true
   - task: bbl-up
     file: ci/scripts/common/bbl-up/task.yml
     params:
@@ -514,6 +516,8 @@ jobs:
     - get: stemcell
       resource: gcp-stemcell
     - get: windows-stemcell
+      passed:
+      - setup-consats-windows-infrastructure
     - get: turbulence-release
     - get: latest-consul-release
     - get: bbl-states-repo
