--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -552,6 +552,7 @@ jobs:
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
       BBL_GCP_PROJECT_ID: {{gcp_project_id}}
       BBL_GCP_REGION: {{gcp_region}}
+      BBL_GCP_ZONE: {{gcp_zone}}
       BBL_STATE_DIR: bbl-gcp-cf
       BBL_NAME: bbl-gcp-cf
       BBL_LB_DOMAIN: bbl-gcp-cf.infrastructure.cf-app.com
