--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -540,22 +540,25 @@ jobs:
   - aggregate:
     - get: bosh-bootloader
       resource: bosh-bootloader-develop
-      passed: [bbl-downstream-docker-image]
-      trigger: true
     - get: ci
       resource: infrastructure-ci
-    - get: bbl-states-repo
+    - get: bbl-state
       resource: infrastructure-ci-bbl-states
+    - get: cf-deployment-concourse-tasks
+    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
+      passed: [bbl-downstream-docker-image]
   - task: bbl-up
-    file: ci/scripts/common/bbl-up/task.yml
+    file: cf-deployment-concourse-tasks/bbl-up/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
     params:
+      BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
       BBL_GCP_PROJECT_ID: {{gcp_project_id}}
       BBL_GCP_REGION: {{gcp_region}}
       BBL_GCP_ZONE: {{gcp_zone}}
       BBL_STATE_DIR: bbl-gcp-cf
-      BBL_NAME: bbl-gcp-cf
-      BBL_LB_DOMAIN: bbl-gcp-cf.infrastructure.cf-app.com
+      BBL_ENV_NAME: bbl-gcp-cf
+      LB_DOMAIN: bbl-gcp-cf.infrastructure.cf-app.com
       BBL_LB_CERT: {{bbl_gcp_cf_lb_cert}}
       BBL_LB_KEY: {{bbl_gcp_cf_lb_key}}
     on_failure:
@@ -565,7 +568,7 @@ jobs:
     ensure:
       put: infrastructure-ci-bbl-states
       params:
-        repository: bbl-states-repo-out
+        repository: updated-bbl-state
         rebase: true
 
 - name: gcp-cf-deploy
